--- a/appspec.yml
+++ b/appspec.yml
@@ -15,18 +15,18 @@ permissions:
       - directory
 hooks:
   BeforeInstall:
-    - location: scripts/BeforeInstall.sh
+    - location: scripts/before_install.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/AfterInstall.sh
+    - location: scripts/after_install.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/ApplicationStart.sh
+    - location: scripts/application_start.sh
       timeout: 300
       runas: root
   ValidateService:
-    - location: scripts/ValidateService.sh
+    - location: scripts/validate_service.sh
       timeout: 300
       runas: root
