--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source: /wordpress/
     destination: /var/www/html/ 
     # Todo el contenido de tu repositorio (incluyendo la carpeta 'wordpress/', 'scripts/', etc.) 
     # se copiará a /var/www/html/
