--- a/appspec.yml
+++ b/appspec.yml
@@ -9,8 +9,8 @@ files:
 permissions:
   - object: /var/www/html/
     pattern: "**"
-    owner: ec2-user # Ajusta al usuario de tu servidor web (ej. 'www-data' o 'ec2-user')
-    group: ec2-user
+    owner: apache # Ajusta al usuario de tu servidor web (ej. 'www-data' o 'ec2-user')
+    group: apache
     type:
       - file
       - directory
